[metadata]
name = investment_local_horse_racing_trader
version = attr: investment_local_horse_racing_trader.VERSION
url = https://github.com/u6k/investment-local-horse-racing-trader
author = u6k
author_email = u6k.apps@gmail.com
description = Trade for local horse racing
long_description = file: README.md
license = MIT License

[options]
packages = find:

[flake8]
max-line-length = 1000
